--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,24 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    // System Ui Controller
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+
+    // Koin
+    implementation "dev.burnoo:cokoin:0.3.2"
+    implementation "dev.burnoo:cokoin-android-viewmodel:0.3.2"
+    implementation "dev.burnoo:cokoin-android-navigation:0.3.2"
+
 }
