--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +20,18 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Weather">
+
+        </activity>
+
+        <activity
+            android:name=".ui.daysweather.WeatherByDay"
+            android:exported="true"
+            android:theme="@style/Theme.Weather" />
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Weather">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,11 +39,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.daysweather.WeatherByDay"
-            android:exported="true"
-            android:theme="@style/Theme.Weather">
-        </activity>
+
     </application>
 
 </manifest>
