--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,10 @@ dependencies {
     //Shimmer
     implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.4'
 
+wi    implementation "com.github.aakarshrestha:compose-swipe-to-refresh:1.0.6"
+
+    //Swipe Refresh
+    implementation 'com.google.accompanist:accompanist-swiperefresh:0.27.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+
 }
