--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,13 @@ dependencies {
     //Shimmer
     implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.4'
 
-wi    implementation "com.github.aakarshrestha:compose-swipe-to-refresh:1.0.6"
-
     //Swipe Refresh
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.27.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+
+    //Google Maps
+    implementation 'com.google.maps.android:maps-compose:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
 
 }
