--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,13 @@ dependencies {
     //Dialog
     implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.2.0'
     implementation 'com.maxkeppeler.sheets-compose-dialogs:info:1.2.0'
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:state:1.2.0'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie-compose:5.2.0'
+
+    //Data Store
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
 
 }
